objects/DMAPP__Plan_Type__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__AM_Custom_Tab_One_Label__c</fullName>
        <description>This is the Label which will appear in your first AM Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your first AM Custom Tab</inlineHelpText>
        <label>Tab One Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Custom_Tab_One_Src__c</fullName>
        <description>The Visualforce page which your first AM Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your first AM Custom Tab will show</inlineHelpText>
        <label>Tab One Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Custom_Tab_Three_Label__c</fullName>
        <description>This is the Label which will appear in your third AM Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your third AM Custom Tab</inlineHelpText>
        <label>Tab Three Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Custom_Tab_Three_Src__c</fullName>
        <description>The Visualforce page which your third AM Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your third AM Custom Tab will show</inlineHelpText>
        <label>Tab Three Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Custom_Tab_Two_Label__c</fullName>
        <description>This is the Label which will appear in your second AM Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your second AM Custom Tab</inlineHelpText>
        <label>Tab Two Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Custom_Tab_Two_Src__c</fullName>
        <description>The Visualforce page which your second AM Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your second AM Custom Tab will show</inlineHelpText>
        <label>Tab Two Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__ComparisionJSONFileName__c</fullName>
        <description>Contains file name</description>
        <label>ComparisionJSONFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Current_Opportunity_Multiplier__c</fullName>
        <defaultValue>3</defaultValue>
        <description>This value is part of the Scorecard calculation that indicates whether you have enough opportunities in your current pipeline.
It features in the formula:
Total Current Pipeline Goal = Annual Plan Target x Current Opportunity Multiplier</description>
        <inlineHelpText>This value is part of the Scorecard calculation that indicates whether you have enough opportunities in your current pipeline.
It features in the formula:
Total Current Pipeline Goal = Annual Plan Target x Current Opportunity Multiplier</inlineHelpText>
        <label>Current Opportunity Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Current_Ops_Ratio_Amber__c</fullName>
        <defaultValue>0.70</defaultValue>
        <label>Current Opportunities Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Current_Ops_Ratio_Green__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Current Opportunities Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>Used to distinguish certain Plan Types as standard Dealmaker, and for identifying specific ones</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Completeness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables ‘Completeness’. You should disable ‘Scorecard’ and ‘Completeness’ if you have disabled any of the other tabs because ‘Scorecard’ and ‘Completeness’ cover all aspects of an account plan. So when tabs are disabled they may be misleading.</description>
        <inlineHelpText>Disables ‘Completeness’. You should disable ‘Scorecard’ and ‘Completeness’ if you have disabled any of the other tabs because ‘Scorecard’ and ‘Completeness’ cover all aspects of an account plan. So when tabs are disabled they may be misleading.</inlineHelpText>
        <label>Disable Completeness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Objectives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this setting is enabled, the Objectives tab is not included in account plans of this type, and objectives can’t be included in a Powerpoint export of one of these plans.

When this setting is disabled, the Objectives tab is included in account plans of this type, and objectives can be included in a Powerpoint export as long as the AM Add Plan Details setting is enabled in Dealmaker Powerpoint custom settings.</description>
        <inlineHelpText>Disable Objectives for this Plan Type</inlineHelpText>
        <label>Disable Objectives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Plan_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this setting is enabled, the Plan Details tab is not included in account plans of this type, and plan details can’t be included in a Powerpoint export of one of these plans.

When this setting is disabled, the Plan Details tab is included in account plans of this type, and plan details can be included in a Powerpoint export as long as the AM Add Plan Details setting is enabled in Dealmaker Powerpoint custom settings.</description>
        <inlineHelpText>Disable Plan Details for this Plan Type</inlineHelpText>
        <label>Disable Plan Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Scorecard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables ‘Scorecard’. You should disable ‘Scorecard’ and ‘Completeness’ if you have disabled any of the other tabs because ‘Scorecard’ and ‘Completeness’ cover all aspects of an account plan. So when tabs are disabled they may be misleading.</description>
        <inlineHelpText>Disables ‘Scorecard’. You should disable ‘Scorecard’ and ‘Completeness’ if you have disabled any of the other tabs because ‘Scorecard’ and ‘Completeness’ cover all aspects of an account plan. So when tabs are disabled they may be misleading.</inlineHelpText>
        <label>Disable Scorecard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Segmentation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Segmentation for this Plan Type</description>
        <inlineHelpText>Disable Segmentation for this Plan Type</inlineHelpText>
        <label>Disable Segmentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Value_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Value Map for this Plan Type</description>
        <inlineHelpText>Disable Value Map for this Plan Type</inlineHelpText>
        <label>Disable Value Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Horizontal_Axis__c</fullName>
        <description>Specify the title of the horizontal axis on the Segmentation Map.</description>
        <inlineHelpText>Specify the title of the horizontal axis on the Segmentation Map.</inlineHelpText>
        <label>Horizontal Axis</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Inactive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>While this checkbox is selected, this plan type is unavailable in the Plan Type list when a user is creating a new account plan.</description>
        <inlineHelpText>While this checkbox is selected, this plan type is unavailable in the Plan Type list when a user is creating a new account plan.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>Active (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order_No__c</fullName>
        <label>Order No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Opportunity_Multiplier__c</fullName>
        <defaultValue>5</defaultValue>
        <description>This value is part of the Scorecard calculation that indicates whether you have enough value in the potential pipeline to fill the plan pipeline funnel.
It features in the formula:
Potential Goal Value = Annual Plan Target x Potential Opportunity Multiplier</description>
        <inlineHelpText>This value is part of the Scorecard calculation that indicates whether you have enough value in the potential pipeline to fill the plan pipeline funnel.
It&apos;s in the formula:
Potential Goal Value = Annual Plan Target x Potential Opportunity Multipli</inlineHelpText>
        <label>Potential Opportunity Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Ops_Ratio_Amber__c</fullName>
        <defaultValue>0.7</defaultValue>
        <label>Potential Opportunities Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Ops_Ratio_Green__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Potential Opportunities Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation_Score_Amber__c</fullName>
        <defaultValue>0.7</defaultValue>
        <label>Mutual Value Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Segmentation_Score_Green__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Mutual Value Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Contribution_Amber__c</fullName>
        <defaultValue>0.7</defaultValue>
        <label>Targeted Solution Pipeline Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Contribution_Green__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Targeted Solution Pipeline Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Coverage_Amber__c</fullName>
        <defaultValue>0.5</defaultValue>
        <label>Targeted Relationship Coverage Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Coverage_Green__c</fullName>
        <defaultValue>0.7</defaultValue>
        <label>Targeted Relationship Coverage Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Penetration_Amber__c</fullName>
        <defaultValue>0.5</defaultValue>
        <label>Targeted Solution Penetration Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Penetration_Green__c</fullName>
        <defaultValue>0.7</defaultValue>
        <label>Targeted Solution Penetration Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Potential_Amber__c</fullName>
        <defaultValue>0.7</defaultValue>
        <label>Targeted Solution Potential Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategic_Potential_Green__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Targeted Solution Potential Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tactical_Coverage_Amber__c</fullName>
        <defaultValue>0.7</defaultValue>
        <label>Targeted Unit Coverage Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Tactical_Coverage_Green__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Targeted Unit Coverage Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Target_Revenue_Attainment_Amber__c</fullName>
        <defaultValue>0.8</defaultValue>
        <label>Revenue Attainment Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Target_Revenue_Attainment_Green__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Revenue Attainment Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Contribution_Amber__c</fullName>
        <defaultValue>0.5</defaultValue>
        <label>Value To Customer Amber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_Contribution_Green__c</fullName>
        <defaultValue>0.7</defaultValue>
        <label>Value To Customer Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Vertical_Axis__c</fullName>
        <description>Specify the title of the vertical axis on the Segmentation Map</description>
        <inlineHelpText>Specify the title of the vertical axis on the Segmentation Map</inlineHelpText>
        <label>Vertical Axis</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Plan Type</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DMAPP__CurrentOpportunitiesValidRange</fullName>
        <active>true</active>
        <errorConditionFormula>(DMAPP__Current_Ops_Ratio_Green__c &lt; 0 || DMAPP__Current_Ops_Ratio_Green__c &gt; 50) || (DMAPP__Current_Ops_Ratio_Amber__c &lt; 0 || DMAPP__Current_Ops_Ratio_Amber__c &gt; 50) || (DMAPP__Current_Ops_Ratio_Amber__c &gt; DMAPP__Current_Ops_Ratio_Green__c)</errorConditionFormula>
        <errorMessage>Current Opportunities Green and Amber cannot be less than 0% or greater than 5000% and Current Opportunities Green cannot be less than Current Opportunities Amber</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__MutualValueValidRange</fullName>
        <active>true</active>
        <errorConditionFormula>(DMAPP__Segmentation_Score_Green__c  &lt; 0 ||  DMAPP__Segmentation_Score_Green__c &gt; 1) ||
(DMAPP__Segmentation_Score_Amber__c &lt; 0 || DMAPP__Segmentation_Score_Amber__c &gt; 1) ||
(DMAPP__Segmentation_Score_Amber__c  &gt;  DMAPP__Segmentation_Score_Green__c)</errorConditionFormula>
        <errorMessage>Mutual Value Green and Amber cannot be less than 0% or greater than 100% and Mutual Value Green cannot be less than Mutual Value Amber</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__Plan_Type_Name_Maximum_Length_is_40_char</fullName>
        <active>true</active>
        <description>Plan Type Name Maximum Length is 40 chars</description>
        <errorConditionFormula>LEN(Name) &gt; 40</errorConditionFormula>
        <errorMessage>Plan Type Name Maximum Length is 40 chars</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__PotentialOpportunitiesValidRange</fullName>
        <active>true</active>
        <errorConditionFormula>(DMAPP__Potential_Ops_Ratio_Green__c &lt; 0  || DMAPP__Potential_Ops_Ratio_Green__c &gt; 50) || (DMAPP__Potential_Ops_Ratio_Amber__c &lt; 0 || DMAPP__Potential_Ops_Ratio_Amber__c &gt; 50) || (
DMAPP__Potential_Ops_Ratio_Amber__c &gt; DMAPP__Potential_Ops_Ratio_Green__c)</errorConditionFormula>
        <errorMessage>Potential Opportunities Green and Amber cannot be less than 0% or greater than 5000% and Potential Opportunities Green cannot be less than Potential Opportunities Amber</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__RevenueAttainmentValidRange</fullName>
        <active>true</active>
        <errorConditionFormula>(DMAPP__Target_Revenue_Attainment_Green__c &lt; 0 || DMAPP__Target_Revenue_Attainment_Green__c &gt; 1) ||
(DMAPP__Target_Revenue_Attainment_Amber__c  &lt; 0 ||   DMAPP__Target_Revenue_Attainment_Amber__c &gt; 1) ||
(DMAPP__Target_Revenue_Attainment_Amber__c  &gt;  DMAPP__Target_Revenue_Attainment_Green__c)</errorConditionFormula>
        <errorMessage>Revenue Attainment Green and Amber cannot be less than 0% or greater than 100% and Revenue Attainment Green cannot be less than Revenue Attainment Amber</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__TargetedRelationshipCoverageValidRange</fullName>
        <active>true</active>
        <errorConditionFormula>(DMAPP__Strategic_Coverage_Green__c  &lt; 0 || DMAPP__Strategic_Coverage_Green__c &gt; 1) ||
(DMAPP__Strategic_Coverage_Amber__c &lt; 0 || DMAPP__Strategic_Coverage_Amber__c &gt; 1) ||
(DMAPP__Strategic_Coverage_Amber__c  &gt;  DMAPP__Strategic_Coverage_Green__c)</errorConditionFormula>
        <errorMessage>Targeted Relationship Coverage Green and Amber cannot be less than 0% or greater than 100% and Targeted Relationship Coverage Green cannot be less than Targeted Relationship Coverage Amber</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__TargetedSolutionPenetrationValidRange</fullName>
        <active>true</active>
        <errorConditionFormula>(DMAPP__Strategic_Penetration_Green__c &lt; 0 || DMAPP__Strategic_Penetration_Green__c &gt; 1) ||
(DMAPP__Strategic_Penetration_Amber__c &lt; 0 || DMAPP__Strategic_Penetration_Amber__c &gt; 1) ||
(DMAPP__Strategic_Penetration_Amber__c  &gt;  DMAPP__Strategic_Penetration_Green__c)</errorConditionFormula>
        <errorMessage>Targeted Solution Penetration Green and Amber cannot be less than 0% or greater than 100% and Targeted Solution Penetration Green cannot be less than Targeted Solution Penetration Amber</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__TargetedSolutionPipelineValidRange</fullName>
        <active>true</active>
        <errorConditionFormula>(DMAPP__Strategic_Contribution_Green__c &lt; 0 || DMAPP__Strategic_Contribution_Green__c &gt; 1) ||
(DMAPP__Strategic_Contribution_Amber__c  &lt; 0 ||  DMAPP__Strategic_Contribution_Amber__c  &gt; 1) ||
(DMAPP__Strategic_Contribution_Amber__c  &gt;  DMAPP__Strategic_Contribution_Green__c)</errorConditionFormula>
        <errorMessage>Targeted Solution Pipeline Green and Amber cannot be less than 0% or greater than 100% and Targeted Solution Pipeline Green cannot be less than Targeted Solution Pipeline Amber</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__TargetedSolutionPotentialValidRange</fullName>
        <active>true</active>
        <errorConditionFormula>(DMAPP__Strategic_Potential_Green__c &lt; 0 || DMAPP__Strategic_Potential_Green__c &gt; 1) ||
(DMAPP__Strategic_Potential_Amber__c  &lt; 0 ||  DMAPP__Strategic_Potential_Amber__c &gt; 1) ||
(DMAPP__Strategic_Potential_Amber__c  &gt;  DMAPP__Strategic_Potential_Green__c)</errorConditionFormula>
        <errorMessage>Targeted Solution Potential Green and Amber cannot be less than 0% or greater than 100% and Targeted Solution Potential Green cannot be less than Targeted Solution Potential Amber</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__TargetedUnitCoverageValidRange</fullName>
        <active>true</active>
        <errorConditionFormula>(DMAPP__Tactical_Coverage_Green__c  &lt; 0 ||  DMAPP__Tactical_Coverage_Green__c &gt; 1) ||
(DMAPP__Tactical_Coverage_Amber__c  &lt; 0 || DMAPP__Tactical_Coverage_Amber__c &gt; 1) ||
(DMAPP__Tactical_Coverage_Amber__c   &gt;  DMAPP__Tactical_Coverage_Green__c)</errorConditionFormula>
        <errorMessage>Targeted Unit Coverage Green and Amber cannot be less than 0% or greater than 100% and Targeted Unit Coverage Green cannot be less than Targeted Unit Coverage Amber</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DMAPP__ValueToCustomerValidRange</fullName>
        <active>true</active>
        <errorConditionFormula>(DMAPP__Value_Contribution_Green__c &lt; 0 || DMAPP__Value_Contribution_Green__c &gt; 1)  || (DMAPP__Value_Contribution_Amber__c  &lt; 0 ||  DMAPP__Value_Contribution_Amber__c &gt; 1) || (DMAPP__Value_Contribution_Amber__c  &gt;  DMAPP__Value_Contribution_Green__c)</errorConditionFormula>
        <errorMessage>Value To Customer Green and Amber cannot be less than 0% or greater than 100% and Value To Customer Green cannot be less than Value To Customer Amber</errorMessage>
    </validationRules>
</CustomObject>